# beckon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  test-i3-env.sh
.github/workflows/: ci.yml  release.yml
crates/beckon-cli/: Cargo.toml
crates/beckon-cli/src/: main.rs
crates/beckon-cli/tests/: hyprland_e2e.rs
crates/beckon-core/: Cargo.toml
crates/beckon-core/src/: lib.rs
crates/beckon-linux/: Cargo.toml
crates/beckon-linux/src/: algorithm.rs  desktop.rs  gnome.rs  hyprland.rs  i3ipc.rs  lib.rs  state.rs  x11.rs
crates/beckon-macos/: Cargo.toml
crates/beckon-macos/src/: apps.rs  backend.rs  ffi.rs  lib.rs  windows.rs
crates/beckon-windows/: Cargo.toml
crates/beckon-windows/src/: apps.rs  backend.rs  lib.rs  window_ops.rs
examples/: README.md
examples/linux/gnome-x11/: README.md  setup.sh
examples/linux/hyprland/: README.md  beckon.conf
examples/linux/i3/: beckon.config
examples/linux/kde-x11/: README.md
examples/linux/openbox/: README.md  rc.xml.snippet
examples/linux/sway/: README.md  beckon.conf
examples/linux/xfce/: README.md
examples/macos/hammerspoon/: README.md  init.lua
examples/windows/ahk/: README.md  beckon.ahk
extensions/beckon@xom11.github.io/: extension.js  metadata.json
nix/: gnome-extension.nix  package.nix
packaging/homebrew/Formula/: beckon.rb
