[workspace]
resolver = "2"
members = [
    "crates/beckon-core",
    "crates/beckon-linux",
    "crates/beckon-macos",
    "crates/beckon-cli",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
anyhow    = "1"
thiserror = "2"
clap      = { version = "4", features = ["derive"] }
swayipc   = "3"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
