[package]
name         = "beckon-cli"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "beckon"
path = "src/main.rs"

[dependencies]
beckon-core = { path = "../beckon-core" }
anyhow      = { workspace = true }
clap        = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
beckon-linux = { path = "../beckon-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
beckon-macos = { path = "../beckon-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
beckon-windows = { path = "../beckon-windows" }
