[package]
name         = "beckon-linux"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
beckon-core = { path = "../beckon-core" }
thiserror   = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
swayipc = { workspace = true }
