[package]
name         = "beckon-linux"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
beckon-core = { path = "../beckon-core" }
thiserror   = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
swayipc    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
x11rb      = { workspace = true }
zbus       = { workspace = true }
