[package]
name         = "beckon-windows"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
beckon-core = { path = "../beckon-core" }
anyhow      = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]
